--- a/react-app/react-app/package.json
+++ b/react-app/react-app/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-paginate": "^8.2.0",
