--- a/react-app/react-app/package.json
+++ b/react-app/react-app/package.json
@@ -6,12 +6,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.3.0",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "lodash.debounce": "^4.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-nouislider": "^2.0.1",
     "react-paginate": "^8.2.0",
     "react-range": "^1.10.0",
     "react-router-dom": "^7.1.1",
